syntax = "proto3";

option java_package = "dev.vepo.kafka.tool.controls.helpers.pojo";
option java_multiple_files = false;
option java_outer_classname = "Pojos";

message Simple {
	int32 value = 1;
}

message Complex {
	int64 id = 1;
	string username = 2;
	string email = 3;
	int32 value = 4;
	Simple simple = 5;
	enum Corpus {
    	UNIVERSAL = 0;
	    WEB       = 1;
	    IMAGES    = 2;
	    LOCAL     = 3;
	    NEWS      = 4;
	    PRODUCTS  = 5;
	    VIDEO     = 6;
  	}
  	Corpus corpus           =  6;
  	repeated string tags    =  7;
  	repeated Simple simples =  8;
  	bool booleanValue       =  9;
  	bytes data              = 10;
  	double doubleValue      = 11;
  	repeated Corpus corpusA = 12;
  	float floatValue        = 13;
	map<string, Simple> map = 14;
}